# django-playground-app

./: .gitignore  pyproject.toml
books/config/: settings.py  urls.py
books/store/: admin.py  models.py  permissions.py  serializers.py  views.py
books/store/migrations/: 0001_initial.py  0002_book_author_name_alter_book_name.py  0003_book_owner.py  0004_userbookrelation.py  0005_book_readers_alter_book_owner.py  0006_alter_userbookrelation_rate.py  0007_book_rating.py
books/store/tests/: test_api.py  test_serializers.py  test_services.py
books/templates/: oauth.html
